# dewey

./: .gitignore  ARCHITECTURE.md  README.md  TODO.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20251204_1945_38f06fc31d15_initial_schema.py  20251204_2100_add_form_links.py  20251204_2200_add_email_templates.py  20251204_2300_add_tone_stance.py  20251205_0700_add_contact_demographics.py  20251205_0800_add_contact_is_active.py  20251205_0900_add_lov_and_pronouns.py  20251205_1000_add_voter_import.py  20251205_1100_add_contact_source.py  20251205_1200_add_audit_log.py  20251205_1300_add_job_create_unmatched.py  20251205_1400_add_job_arq_fields.py  20251205_1430_make_contact_email_nullable.py  20251205_1500_campaign_outbound_system.py  20251206_1541_4582818bcf73_add_prompttemplate_and_aiusagelog_models.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  analytics.py  api_keys.py  audit.py  auth.py  campaign_recommendations.py  campaigns.py  categories.py  contacts.py  custom_fields.py  deps.py  email_templates.py  email_webhooks.py  forms.py  health.py  lov.py  messages.py  roles.py  suppressions.py  tenants.py  users.py  voter_import.py  workflows.py
backend/app/core/: config.py  database.py  encryption.py  queue.py  redis.py  security.py
backend/app/models/: __init__.py  ai_usage_log.py  analysis.py  api_key.py  audit_log.py  base.py  campaign.py  campaign_recommendation.py  category.py  contact.py  email.py  form.py  job.py  lov.py  message.py  prompt_template.py  tenant.py  user.py  vote_history.py  workflow.py
backend/app/schemas/: __init__.py  auth.py  roles.py
backend/app/services/: __init__.py  audit.py  auth.py  azure_auth.py  campaign_sender.py  form_links.py  job_status.py  voter_import.py
backend/app/services/ai/: __init__.py  field_mapper.py  message_analyzer.py
backend/app/services/ai/prompts/: __init__.py  defaults.py
backend/app/services/ai/providers/: __init__.py  azure_openai.py  base.py  claude.py  factory.py  ollama.py  openai.py
backend/app/services/email/: __init__.py  providers.py  sender.py  template_renderer.py
backend/app/workers/: __init__.py  tasks.py  worker.py
backend/scripts/: seed_dev_data.py
backend/tests/: __init__.py
docs/: COMPETITIVE_ANALYSIS_IQ_CRM.md
docs/sample_data/: sample_vote_history.csv  sample_voter_file.csv  sample_voter_file_wide.csv
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: FieldPropertyDrawer.tsx  FormPreview.tsx
frontend/src/hooks/: index.ts  useAnalytics.ts  useMessages.ts
frontend/src/layouts/: AuthLayout.tsx  MainLayout.tsx
frontend/src/pages/: Analytics.tsx  AzureCallback.tsx  CampaignDetail.tsx  Campaigns.tsx  Categories.tsx  ContactDetail.tsx  Contacts.tsx  Dashboard.tsx  EmailTemplateEditor.tsx  EmailTemplates.tsx  FormBuilder.tsx  FormEmbed.tsx  FormLinks.tsx  FormSubmissions.tsx  Forms.tsx  Jobs.tsx  Login.tsx  MessageDetail.tsx  Messages.tsx  Profile.tsx  Register.tsx  Settings.tsx  VoterImport.tsx  Workflows.tsx
(+34 files in other folders)
